--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.6",
+		"supabase": "^2.39.2",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.1.12",
