--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.22.0",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.10",
+		"@types/nodemailer": "^7.0.1",
 		"autoprefixer": "^10.4.21",
 		"postcss": "^8.5.6",
 		"supabase": "^2.39.2",
@@ -30,6 +31,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@tailwindcss/vite": "^4.1.12",
 		"cloudinary": "^2.7.0",
+		"nodemailer": "^7.0.6",
 		"tw-animate-css": "^1.3.7"
 	}
 }
